--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
-.px-1 {
+.px-1,
+.p-1 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.py-1 {
+.py-1,
+.p-1 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.box-shadow-y {
+  box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.15);
 }
 .menu-container {
   position: fixed;
@@ -19,7 +25,14 @@
 .menu-container.active {
   transform: translateX(0%);
 }
-
+.icon {
+  height: 30px;
+  width: 30px;
+  vertical-align: baseline;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
 .toggler {
   margin-left: 0;
 }
